--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,7 @@ button {
   font-size: 18px;
   color: black;
   padding: 8px;
+  margin: 0;
   border: 4px solid black;
   background: #fff;
   font-weight: bold;
