--- a/pages/_lib/styles.css
+++ b/pages/_lib/styles.css
@@ -1,11 +1,19 @@
-html,
+html {
+  height: 100%;
+}
+
 body {
-  font-size: 18px;
-  padding: 0;
+  min-height: 100%;
   margin: 0;
+  padding: 0;
+  background: linear-gradient(45deg, yellow, orange);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: linear-gradient(45deg, yellow, orange);
 }
 
 * {
@@ -13,12 +21,7 @@ body {
 }
 
 .container {
-  min-height: 100vh;
   padding: 0 14px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 form {
