--- a/lib/styles.css
+++ b/lib/styles.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
+  font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -37,9 +37,10 @@ form *:not(:last-child) {
 
 .input-field {
   width: 292px;
-  font-size: 18px;
-  padding: 8px;
+  height: 36px;
   border: none;
   border-radius: 0;
+  padding: 8px;
+  font-size: 18px;
   font-weight: bold;
 }
