--- a/lib/styles.css
+++ b/lib/styles.css
@@ -1,3 +1,7 @@
+* {
+  -webkit-font-smoothing: antialiased;
+}
+
 html {
   height: 100%;
 }
@@ -12,8 +16,9 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Inter', 'Helvetica Neue',
+    sans-serif;
 }
 
 * {
