--- a/lib/styles.css
+++ b/lib/styles.css
@@ -51,8 +51,8 @@ form *:not(:last-child) {
 
 .input-field {
   width: 292px;
-  height: 36px;
-  border: none;
+  height: 42px;
+  border: 3px solid black;
   border-radius: 0;
   padding: 8px;
   font-size: 18px;
