--- a/lib/styles.css
+++ b/lib/styles.css
@@ -10,7 +10,7 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  background: linear-gradient(0deg, #ffff99, white);
+  background-color: lightyellow;
   display: flex;
   flex-direction: column;
   justify-content: center;
