--- a/lib/styles.css
+++ b/lib/styles.css
@@ -1,33 +1,23 @@
 * {
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  min-height: 100%;
   margin: 0;
   padding: 0;
   background-color: lightyellow;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-size: 20px;
   font-family: -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Inter', 'Helvetica Neue',
     sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 .container {
-  margin: 0 14px;
-  width: 292px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
