--- a/lib/styles.css
+++ b/lib/styles.css
@@ -13,11 +13,17 @@ body {
 }
 
 .container {
-  min-height: 100vh;
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+@media screen and (min-width: 720px) {
+  .container {
+    min-height: 85vh;
+  }
 }
 
 h2 {
